<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarHome"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bluePrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:id="@+id/imgBackk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_data"
            android:fontFamily="@font/poppin_semibold"
            android:textSize="16sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/white"
            />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tvAddNewTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_task"
        android:textSize="16sp"
        android:gravity="start"
        android:fontFamily="@font/poppin_semibold"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarHome"
        android:layout_marginTop="34dp"
        />
    <TextView
        android:id="@+id/tvWhatdoYouWant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_do_you_want"
        android:textSize="16sp"
        android:gravity="start"
        android:fontFamily="@font/poppin_regular"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddNewTask"
        android:layout_marginTop="18dp"
        />
    <EditText
        android:id="@+id/edtEditNote"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/tvWhatdoYouWant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/tuliskan_sesuatu"
        android:textSize="16sp"
        android:fontFamily="@font/poppin_regular"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="top|start"
        android:paddingTop="10dp"
        android:layout_marginTop="25dp"
        />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/bg_button"
        android:text="@string/edit"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEditNote" />

</androidx.constraintlayout.widget.ConstraintLayout>