<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="322dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextView
        android:id="@+id/tvAddNewTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_task"
        android:textSize="16sp"
        android:gravity="start"
        android:fontFamily="@font/poppin_semibold"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="34dp"
        />
    <TextView
        android:id="@+id/tvWhatdoYouWant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_do_you_want"
        android:textSize="16sp"
        android:gravity="start"
        android:fontFamily="@font/poppin_regular"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddNewTask"
        android:layout_marginTop="18dp"
        />
    <EditText
        android:id="@+id/edtNote"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/tvWhatdoYouWant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/tuliskan_sesuatu"
        android:textSize="16sp"
        android:fontFamily="@font/poppin_regular"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center_vertical"
        android:layout_marginTop="25dp"
        />

    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="27dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@id/imgAdd"
        app:layout_constraintEnd_toStartOf="@+id/imgAdd"
        app:layout_constraintTop_toTopOf="@+id/imgAdd"
        app:tint="@color/red" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppin_regular"
        android:text="Close"
        android:textColor="@color/red"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@id/imgClose"
        app:layout_constraintStart_toStartOf="@id/imgClose"
        app:layout_constraintTop_toBottomOf="@id/imgClose" />


    <ImageView
        android:id="@+id/imgAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNote"
        app:srcCompat="@drawable/ic_add_task"
        app:tint="@color/green" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:fontFamily="@font/poppin_regular"
        android:text="@string/add_task"
        android:textColor="@color/green"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/imgAdd"
        app:layout_constraintStart_toStartOf="@id/imgAdd"
        app:layout_constraintTop_toBottomOf="@id/imgAdd" />

</androidx.constraintlayout.widget.ConstraintLayout>